--- a/data/zim.plugins.gnomeshellsearch.provider.service.in
+++ b/data/zim.plugins.gnomeshellsearch.provider.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=net.launchpad.zim.plugins.gnomeshellsearch.provider
-Exec=@INSTALLDIR@/bin/zim --plugin gnomeshellsearch
+Exec=@INSTALLDIR@/bin/zim-gnomeshellsearch
