flake8: ignore N802 & N801 warnings
The D-Bus method names do not use Python conventions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,8 @@
 [flake8]
 builtins = unicode,xrange
+ignore = N802
+
+# Excuses for ignorance:
+#
+# * N802 "function name should be lowercase":
+#   D-Bus method names unfortunately to not use Python conventions.
